// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Trading-Component Matches SnapShot With Values 1`] = `
Array [
  .c4 {
  border: 1px solid #374151;
  background-color: #1F2937;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4:focus-within {
  border-color: #1D9384;
}

.c4 > svg {
  color: #FFFFFF;
}

.c4 > input {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  background: transparent;
  border: none;
  color: #FFFFFF;
  font-size: 1rem;
  font-family: Jost,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
  height: 36px;
  width: 100%;
  padding: 0;
  padding-left: calc((40px - 1rem) / 2);
  padding-right: calc( (40px - 1rem) / 2 );
}

.c4 > input:active,
.c4 > input:focus {
  outline: none;
}

.c4 > input::-webkit-input-placeholder {
  color: #9CA3AF;
}

.c4 > input::-moz-placeholder {
  color: #9CA3AF;
}

.c4 > input:-ms-input-placeholder {
  color: #9CA3AF;
}

.c4 > input::placeholder {
  color: #9CA3AF;
}

.c1 {
  color: #FFFFFF;
  padding: 1rem 1.25rem;
  background-color: #17202F;
  border-radius: 8px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  border: 1px solid transparent;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0.25rem 0;
  margin-right: 0.5rem;
}

.c3 button {
  margin-right: 6px;
  padding: 0.125rem 0.5rem;
  font-size: 12px;
  border-radius: 2px;
}

.c3:hover {
  background-color: #1F2937;
}

.c5 {
  font-size: 24px;
  background: none;
  border: none;
  color: #FFFFFF;
  display: block;
  width: 100%;
  font-weight: 500;
  padding: 0 0.5rem;
  line-height: 1;
  height: 1.5rem;
}

.c5:focus {
  outline: none;
}

.c5 > input {
  padding-left: 0;
  padding-right: 0;
  line-height: 1;
  font-size: 24px;
  height: 1.5rem;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  color: #D1D5DB;
  font-size: 12px;
  padding: 0.25rem 0 0.125rem 0.5rem;
  line-height: 16px;
}

.c6 {
  position: relative;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 24px;
  line-height: 1;
  cursor: pointer;
  border-radius: 4px;
}

.c7:hover {
  background-color: #1F2937;
}

.c7 svg:first-of-type {
  border-radius: 50%;
  margin-right: 0.25rem;
}

.c7 svg:last-child {
  color: #453a3c ;
}

.c8 {
  display: inline-block;
}

.c8 svg {
  display: block;
}

.c8 svg {
  width: 32px;
  height: 32px;
}

.c0 {
  background: #1F2937;
  border: 1px solid #374151;
  box-sizing: border-box;
  border-radius: 8px;
}

@media (max-width:420px) {
  .c1 {
    padding: 1rem 0.5rem;
  }
}

<div
    className="c0"
    data-testid="Trading"
  >
    <div
      className="c1"
      data-testid="TokenAmountPanel"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c4 c5"
            disabled={false}
          >
            <input
              autoFocus={true}
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              value="NaN"
            />
          </div>
        </div>
        <div
          className="c6"
        >
          <div
            className="c7"
          >
            <div
              className="c8"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path d=\\"M16.5 19.0003C16.5 19.0003 16.7269 18.0185 17 17.5003C17.2624 17.0025 17.6716 16.6616 17.6716 16.6616L18.9433 15.9551C19.5665 15.6089 20.0859 15.1023 20.4474 14.4878C20.809 13.8733 20.9997 13.1733 20.9997 12.4604C20.9275 11.3005 20.3995 10.2162 19.5309 9.44416C18.6623 8.67208 17.5236 8.27483 16.3633 8.33907C15.3171 8.29564 14.2887 8.61896 13.4555 9.25318C12.6224 9.88739 12.0369 10.7927 11.8003 11.8126\\" stroke=\\"#453a3c \\" stroke-width=\\"2.15611\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\"/><path d=\\"M18 23.5021C17.9996 23.7982 17.9115 24.088 17.7465 24.3347C17.5816 24.5811 17.3473 24.773 17.0732 24.8861C16.7994 24.9995 16.4979 25.029 16.2068 24.9711C15.9159 24.9131 15.6489 24.7702 15.4392 24.5608C15.2298 24.351 15.0869 24.0841 15.0289 23.7932C14.971 23.5024 15.0005 23.2009 15.1139 22.9268C15.2273 22.6527 15.4189 22.4184 15.6653 22.2535C15.9117 22.0885 16.2014 22.0004 16.4983 22C16.6956 21.9996 16.8911 22.0384 17.0732 22.1138C17.2555 22.1891 17.4212 22.2997 17.5609 22.4391C17.7003 22.5788 17.8109 22.7445 17.8862 22.9268C17.9616 23.1092 18.0004 23.3048 18 23.5021Z\\" fill=\\"#453a3c \\"/></svg>",
                }
              }
              size={32}
            />
            FTM
          </div>
        </div>
      </div>
      <div
        className="c9"
      >
        <span
          className=""
        >
          ≈
           
          $ 0
        </span>
        <span
          className=""
        >
          Balance
          :
           
          0
        </span>
      </div>
    </div>
  </div>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 8px;
  position: static;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  margin: 0px;
  color: #453a3c ;
}

.c1 {
  color: #453a3c ;
}

@media (max-width:420px) {

}

<div
    className="c0"
  >
    <svg
      className="c1"
    >
      arrow-down.svg
    </svg>
  </div>,
  @media (max-width:420px) {

}

<span />,
]
`;

exports[`Trading-Component Matches SnapShot without Values 1`] = `
Array [
  .c4 {
  border: 1px solid #374151;
  background-color: #1F2937;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4:focus-within {
  border-color: #1D9384;
}

.c4 > svg {
  color: #FFFFFF;
}

.c4 > input {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  background: transparent;
  border: none;
  color: #FFFFFF;
  font-size: 1rem;
  font-family: Jost,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
  height: 36px;
  width: 100%;
  padding: 0;
  padding-left: calc((40px - 1rem) / 2);
  padding-right: calc( (40px - 1rem) / 2 );
}

.c4 > input:active,
.c4 > input:focus {
  outline: none;
}

.c4 > input::-webkit-input-placeholder {
  color: #9CA3AF;
}

.c4 > input::-moz-placeholder {
  color: #9CA3AF;
}

.c4 > input:-ms-input-placeholder {
  color: #9CA3AF;
}

.c4 > input::placeholder {
  color: #9CA3AF;
}

.c1 {
  color: #FFFFFF;
  padding: 1rem 1.25rem;
  background-color: #17202F;
  border-radius: 8px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  border: 1px solid transparent;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0.25rem 0;
  margin-right: 0.5rem;
}

.c3 button {
  margin-right: 6px;
  padding: 0.125rem 0.5rem;
  font-size: 12px;
  border-radius: 2px;
}

.c3:hover {
  background-color: #1F2937;
}

.c5 {
  font-size: 24px;
  background: none;
  border: none;
  color: #FFFFFF;
  display: block;
  width: 100%;
  font-weight: 500;
  padding: 0 0.5rem;
  line-height: 1;
  height: 1.5rem;
}

.c5:focus {
  outline: none;
}

.c5 > input {
  padding-left: 0;
  padding-right: 0;
  line-height: 1;
  font-size: 24px;
  height: 1.5rem;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  color: #D1D5DB;
  font-size: 12px;
  padding: 0.25rem 0 0.125rem 0.5rem;
  line-height: 16px;
}

.c6 {
  position: relative;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 24px;
  line-height: 1;
  cursor: pointer;
  border-radius: 4px;
}

.c7:hover {
  background-color: #1F2937;
}

.c7 svg:first-of-type {
  border-radius: 50%;
  margin-right: 0.25rem;
}

.c7 svg:last-child {
  color: #453a3c ;
}

.c8 {
  display: inline-block;
}

.c8 svg {
  display: block;
}

.c8 svg {
  width: 32px;
  height: 32px;
}

.c0 {
  background: #1F2937;
  border: 1px solid #374151;
  box-sizing: border-box;
  border-radius: 8px;
}

@media (max-width:420px) {
  .c1 {
    padding: 1rem 0.5rem;
  }
}

<div
    className="c0"
    data-testid="Trading"
  >
    <div
      className="c1"
      data-testid="TokenAmountPanel"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c4 c5"
            disabled={false}
          >
            <input
              autoFocus={true}
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              value="NaN"
            />
          </div>
        </div>
        <div
          className="c6"
        >
          <div
            className="c7"
          >
            <div
              className="c8"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg width=\\"32\\" height=\\"32\\" viewBox=\\"0 0 32 32\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path d=\\"M16.5 19.0003C16.5 19.0003 16.7269 18.0185 17 17.5003C17.2624 17.0025 17.6716 16.6616 17.6716 16.6616L18.9433 15.9551C19.5665 15.6089 20.0859 15.1023 20.4474 14.4878C20.809 13.8733 20.9997 13.1733 20.9997 12.4604C20.9275 11.3005 20.3995 10.2162 19.5309 9.44416C18.6623 8.67208 17.5236 8.27483 16.3633 8.33907C15.3171 8.29564 14.2887 8.61896 13.4555 9.25318C12.6224 9.88739 12.0369 10.7927 11.8003 11.8126\\" stroke=\\"#453a3c \\" stroke-width=\\"2.15611\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\"/><path d=\\"M18 23.5021C17.9996 23.7982 17.9115 24.088 17.7465 24.3347C17.5816 24.5811 17.3473 24.773 17.0732 24.8861C16.7994 24.9995 16.4979 25.029 16.2068 24.9711C15.9159 24.9131 15.6489 24.7702 15.4392 24.5608C15.2298 24.351 15.0869 24.0841 15.0289 23.7932C14.971 23.5024 15.0005 23.2009 15.1139 22.9268C15.2273 22.6527 15.4189 22.4184 15.6653 22.2535C15.9117 22.0885 16.2014 22.0004 16.4983 22C16.6956 21.9996 16.8911 22.0384 17.0732 22.1138C17.2555 22.1891 17.4212 22.2997 17.5609 22.4391C17.7003 22.5788 17.8109 22.7445 17.8862 22.9268C17.9616 23.1092 18.0004 23.3048 18 23.5021Z\\" fill=\\"#453a3c \\"/></svg>",
                }
              }
              size={32}
            />
            SPIRIT
          </div>
        </div>
      </div>
      <div
        className="c9"
      >
        <span
          className=""
        >
          ≈
           
          $ 0
        </span>
        <span
          className=""
        >
          Balance
          :
           
          0
        </span>
      </div>
    </div>
  </div>,
  @media (max-width:420px) {

}

<span />,
]
`;
